<resources>
    <string name="app_name">SafeHer</string>
    <string name="logo_app">Logo de la app</string>
    <string name="titulo_app">Empieza con S.A.F.E.HER</string>
    <string name="email_label">Correo</string>
    <string name="email_hint">Introduce tu email</string>
    <string name="password_label">Contraseña</string>
    <string name="password_hint">Introduce tu contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="registrarse">Registrarse</string>
    <string name="seleccionar_pais">Selecciona tu país</string>
    <string name="viaje_seguro">Viaje Seguro</string>
    <string name="hint_partida">Elige punto de partida</string>
    <string name="hint_destino">¿A dónde vas?</string>
    <string name="chat_emergencia">Chat de emergencia</string>
    <string name="salida_rapida">Salida rápida</string>
    <string name="centrar_mapa">Centrar mapa</string>
    <string name="lamada_emergencia">Llamada segura</string>

    <string name="google_maps_key">AIzaSyDWbbbV3AFWfHMc1CB_Xd2Vhr31TCWwMLw</string>

    <string-array name="countries_array">
        <item>España</item>
        <item>Francia</item>
        <item>Alemania</item>
        <item>Reino Unido</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
